add - Added locs for ScreensaverPacks and Core
---

We've added some more translations for ScreensaverPacks and Nitrocid.Core.

Nitrocid.Base will be done as soon as the release candidate is ready.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.es.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.es.resx
@@ -1464,5 +1464,8 @@
   <data name="NKS_SCREENSAVERPACKS_DIGITALCLOCK_SETTINGS_DESC" xml:space="preserve">
     <value>Muestra un magnífico reloj digital.</value>
   </data>
+  <data name="NKS_SCREENSAVERPACKS_MAZER_SETTINGS_NEWMAZE_DESC" xml:space="preserve">
+    <value>¿Cuántos milisegundos hay que esperar antes de generar un nuevo laberinto?</value>
+  </data>
 
 </root>
