--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.pt-BR.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.pt-BR.resx
@@ -1464,5 +1464,8 @@
   <data name="NKS_SCREENSAVERPACKS_DIGITALCLOCK_SETTINGS_DESC" xml:space="preserve">
     <value>Mostra um lindo relógio digital.</value>
   </data>
+  <data name="NKS_SCREENSAVERPACKS_MAZER_SETTINGS_NEWMAZE_DESC" xml:space="preserve">
+    <value>Quantos milissegundos devo esperar antes de gerar um novo labirinto?</value>
+  </data>
 
 </root>
