--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ar.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
       <data name="NKS_KERNEL_STARTING_ENVIRONMENT_BASENAME" xml:space="preserve">
-    <value>نيتروسيد كانساس</value>
+    <value>نيتروسيد</value>
   </data>
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>لم يتم تحديد البيئة</value>
+  </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>نقطة دخول مفقودة</value>
   </data>
 
 </root>
