--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.fr.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.fr.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>L&apos;environnement n&apos;est pas spécifié</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Point d&apos;entrée manquant</value>
+  </data>
 
 </root>
