--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ja.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ja.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>環境が指定されていません</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>エントリポイントがありません</value>
+  </data>
 
 </root>
