--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.nl.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.nl.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Omgeving is niet gespecificeerd</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Ontbrekend toegangspunt</value>
+  </data>
 
 </root>
