--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.pt.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.pt.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>O ambiente não está especificado</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Ponto de entrada em falta</value>
+  </data>
 
 </root>
