--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ro.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ro.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Mediul nu este specificat</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Punct de intrare lipsă</value>
+  </data>
 
 </root>
