--- a/public/Nitrocid.Core/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Core/Resources/Languages/cnt-T.json
@@ -16,6 +16,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "環境未指定"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "缺少入口點"
     }
   ]
 }
