--- a/public/Nitrocid.Core/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Core/Resources/Languages/dtc.json
@@ -19,6 +19,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Omgeving is niet gespecificeerd"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Ontbrekend toegangspunt"
     }
   ]
 }
