--- a/public/Nitrocid.Core/Resources/Languages/ger.json
+++ b/public/Nitrocid.Core/Resources/Languages/ger.json
@@ -22,6 +22,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Umgebung ist nicht angegeben"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Fehlender Einstiegspunkt"
     }
   ]
 }
