--- a/public/Nitrocid.Core/Resources/Languages/ita.json
+++ b/public/Nitrocid.Core/Resources/Languages/ita.json
@@ -16,6 +16,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "L'ambiente non è specificato"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Punto di ingresso mancante"
     }
   ]
 }
