--- a/public/Nitrocid.Core/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Core/Resources/Languages/ndo.json
@@ -13,6 +13,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Lingkungan tidak ditentukan"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Titik masuk hilang"
     }
   ]
 }
