--- a/public/Nitrocid.Core/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Core/Resources/Languages/ptg.json
@@ -23,6 +23,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "O ambiente não está especificado"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Ponto de entrada em falta"
     }
   ]
 }
