--- a/public/Nitrocid.Core/Resources/Languages/spa.json
+++ b/public/Nitrocid.Core/Resources/Languages/spa.json
@@ -38,6 +38,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "El entorno no está especificado."
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Punto de entrada faltante"
     }
   ]
 }
