--- a/public/Nitrocid.Core/Resources/Languages/tky.json
+++ b/public/Nitrocid.Core/Resources/Languages/tky.json
@@ -14,6 +14,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Çevre belirtilmemiş"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Eksik giriş noktası"
     }
   ]
 }
