--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.vi.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/Languages/Output/Localizations.vi.resx
@@ -1464,5 +1464,8 @@
   <data name="NKS_SCREENSAVERPACKS_DIGITALCLOCK_SETTINGS_DESC" xml:space="preserve">
     <value>Hiển thị cho bạn một chiếc đồng hồ kỹ thuật số tuyệt đẹp.</value>
   </data>
+  <data name="NKS_SCREENSAVERPACKS_MAZER_SETTINGS_NEWMAZE_DESC" xml:space="preserve">
+    <value>Phải đợi bao nhiêu mili giây trước khi tạo ra một mê cung mới?</value>
+  </data>
 
 </root>
