--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.el.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Το περιβάλλον δεν προσδιορίζεται</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Λείπει το σημείο εισόδου</value>
+  </data>
 
 </root>
