--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.en-GB.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.en-GB.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Environment is not specified</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Missing entry point</value>
+  </data>
 
 </root>
