--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ga.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Ní shonraítear an comhshaol</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Pointe iontrála ar iarraidh</value>
+  </data>
 
 </root>
