--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.hi-Latn.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.hi-Latn.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>paryaavaran nirdisht nahin hai</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>pravesh bindu gum hai</value>
+  </data>
 
 </root>
