--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.hi.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.hi.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>पर्यावरण निर्दिष्ट नहीं है</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>प्रवेश बिंदु गुम है</value>
+  </data>
 
 </root>
