--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.id.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.id.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Lingkungan tidak ditentukan</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Titik masuk hilang</value>
+  </data>
 
 </root>
