--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ko.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.ko.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>환경이 지정되지 않았습니다.</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>진입점이 없습니다</value>
+  </data>
 
 </root>
