--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.la.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.la.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Environment non certa</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Punctum ingressus deest</value>
+  </data>
 
 </root>
