--- a/public/Nitrocid.Core/Resources/Languages/Output/Localizations.nb.resx
+++ b/public/Nitrocid.Core/Resources/Languages/Output/Localizations.nb.resx
@@ -123,5 +123,8 @@
   <data name="NKS_KERNEL_STARTING_ENVIRONMENT_NOENV" xml:space="preserve">
     <value>Miljø er ikke spesifisert</value>
   </data>
+  <data name="NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT" xml:space="preserve">
+    <value>Mangler inngangspunkt</value>
+  </data>
 
 </root>
