--- a/public/Nitrocid.Core/Resources/Languages/enk.json
+++ b/public/Nitrocid.Core/Resources/Languages/enk.json
@@ -12,6 +12,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Environment is not specified"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Missing entry point"
     }
   ]
 }
