--- a/public/Nitrocid.Core/Resources/Languages/grk.json
+++ b/public/Nitrocid.Core/Resources/Languages/grk.json
@@ -14,6 +14,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Το περιβάλλον δεν προσδιορίζεται"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Λείπει το σημείο εισόδου"
     }
   ]
 }
