--- a/public/Nitrocid.Core/Resources/Languages/ind.json
+++ b/public/Nitrocid.Core/Resources/Languages/ind.json
@@ -13,6 +13,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "paryaavaran nirdisht nahin hai"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "pravesh bindu gum hai"
     }
   ]
 }
