--- a/public/Nitrocid.Core/Resources/Languages/iri.json
+++ b/public/Nitrocid.Core/Resources/Languages/iri.json
@@ -14,6 +14,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Ní shonraítear an comhshaol"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Pointe iontrála ar iarraidh"
     }
   ]
 }
