--- a/public/Nitrocid.Core/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Core/Resources/Languages/jpn.json
@@ -13,6 +13,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "環境が指定されていません"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "エントリポイントがありません"
     }
   ]
 }
