--- a/public/Nitrocid.Core/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Core/Resources/Languages/kor-T.json
@@ -14,6 +14,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "환경이 지정되지 않았습니다."
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "진입점이 없습니다"
     }
   ]
 }
