--- a/public/Nitrocid.Core/Resources/Languages/nor.json
+++ b/public/Nitrocid.Core/Resources/Languages/nor.json
@@ -17,6 +17,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Miljø er ikke spesifisert"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Mangler inngangspunkt"
     }
   ]
 }
