--- a/public/Nitrocid.Core/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Core/Resources/Languages/vtn.json
@@ -13,6 +13,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_NOENV",
       "text": "Môi trường không được chỉ định"
+    },
+    {
+      "loc": "NKS_KERNEL_STARTING_ENVIRONMENT_EXCEPTION_MISSINGENTRYPOINT",
+      "text": "Відсутня точка входу"
     }
   ]
 }
