add - Added classic 2FA handler
---

We've added the classic 2FA handler for the classic login handler.

Please note that we currently don't support custom 2FA code prompts, but
we'll add support for it in later development stages of the final version.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/eng.json
+++ b/public/Nitrocid.Base/Resources/Languages/eng.json
@@ -9543,6 +9543,10 @@
     {
       "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
       "text": "Managing your alarms is easy with this interactive TUI. This user interface allows you to add and dismiss alarms. The alarms fire when they reach the timeout period, which causes a notification to show."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "Verification code"
     }
   ]
 }
