imp - Modernized the test fixture screen
---

We've modernized the test fixture screen. This is going to be used as a
testing ground for Terminaux 9.0.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
@@ -7191,5 +7191,38 @@
   <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY" xml:space="preserve">
     <value>Managing your alarms is easy with this interactive TUI. This user interface allows you to add and dismiss alarms. The alarms fire when they reach the timeout period, which causes a notification to show.</value>
   </data>
+  <data name="NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC" xml:space="preserve">
+    <value>Verification code</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE" xml:space="preserve">
+    <value>Interactive testing</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC" xml:space="preserve">
+    <value>How to interactively test kernel components</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY" xml:space="preserve">
+    <value>You can interactively test all kernel components that are testable here by selecting a test section in the left pane and a test fixture in the right pane. You&apos;ll be given a report that indicates that a test has passed or failed.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR" xml:space="preserve">
+    <value>Unknown error when running a test fixture</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_RUNTEST" xml:space="preserve">
+    <value>Run test</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_TESTSUCCEEDED" xml:space="preserve">
+    <value>This test has succeeded!</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_TESTSUCCEEDED_MATCH" xml:space="preserve">
+    <value>Expected value matches actual value.</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_TESTFAILED" xml:space="preserve">
+    <value>This test has failed.</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_TESTFAILED_MESSAGE" xml:space="preserve">
+    <value>Message</value>
+  </data>
+  <data name="T_INPUT_TESTFIXTURES_SELECTOR_TESTFAILED_MATCH" xml:space="preserve">
+    <value>Expected value doesn&apos;t match actual value.</value>
+  </data>
 
 </root>
